css/main.css
/* ... */
h2.bleed{
    color: #FAFAFA;
    padding-top: 2rem;
}

.bleed-image{
    margin: 2rem 0;
    width: 80%;
}

.bleed-text{
    color: #FAFAFA;
    margin: 2rem auto;
}

.bleed-text a{
    color: #FAFAFA;
    text-decoration: underline;
}

@media screen and (max-width: 1000px) {
    .linked-img{
        width: 45%;
    }
    nav a.nav-logo-desktop{
        display: none;
    }
    nav a.nav-logo-mobile{
        display: inline-block;
    }
    .footer-left a.logo{
        width: 40%;
    }
    .bleed-image, .bleed-text{
        width: 100%;
    }
    .socials{
        width: 30%;
    }
}

@media screen and (max-width: 800px) {
    input[type=datetime-local]{
        width: 80%;
    }
    .footer-left a.logo{
        width: 60%;
    }
    .socials{
        width: 40%;
    }
}

@media screen and (max-width: 600px) {
    .linked-img, img{
        width: 100%;
    }
    footer{
        flex-direction: column;
        padding: 2rem 4rem;
        align-items: center;
    }
    .footer-left, .footer-right{
        margin-bottom: 2rem;
        text-align: center;
    }
    .footer-left a.logo{
        width: 80%;
        margin: 1rem auto;
    }
    .socials{
        width: auto;
        margin: auto;
        justify-content: center;
    }
    .socials img{
        width: 2.5rem;
    }
    .bleed{
        flex-direction: column;
        gap: 0;
        margin: 0rem -4rem;
        padding: 2rem;
    }
    .bleed-reverse{
        flex-direction: column-reverse;
    }
    .bleed-image{
        width: 100%;
        margin: auto;
        align-items: center;
    }
    .bleed-text p{
        text-align: center;
        margin: 2rem 2rem 0 2rem;
    }
}

@media screen and (max-width: 450px) { /*extreme cases*/
    nav a.nav-link{
        display: none;
    }
    nav a.nav-logo-mobile{
        width: 3rem;
    }
    .footer-left a.logo{
        width: 12em;
    }
}

/* ----------------- TEXT ELEMENTS -------------------*/

h1{
    font-family: 'Merriweather';
    font-weight: 700;
    font-size: 3rem;
}

h2{
    font-family: 'Merriweather';
    font-weight: 700;
    font-size: 2.5rem;
}

h3{
    font-family: 'Merriweather';
    font-weight: 400;
    font-size: 2rem;
}

h4{
    font-family: 'Merriweather';
    font-weight: 300;
    font-size: 1.5rem;
}

.bold{
    font-weight: 500;
}

/* ----------------- COMBINED ELEMENTS -------------------*/
/*Product Listing Page*/
.prod-listing{
    display: flex;
    flex-wrap: wrap;
    gap: 2rem;
}

/*Product Details Page*/
.prod-details{
    display: flex;
    gap: 2rem;
    align-items: flex-start;
    padding-top: 2rem;
}

.prod-display{
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 0.4rem;
    align-items: center;
    text-align: center;
}

.prod-info{
    width: 140%;
}

.prod-info h2, .prod-info h4{
    margin: 0 0 1rem 0;
}

.prod-info a.text-button{
    display: inline-block;
    margin-top: 0.2rem;
}

.prod-img, .prod-info p{
    width: 100%;
}

.spacer{
    margin: 4rem 0 1rem 0;
}

/*Cart Page*/
.cart{
    display: flex;
    gap: 4rem;
}

.cart-items-total{
    width: 60%;
    padding: 2rem;
    border: 2px solid #F2D9CC;
}

.cart-items-total h4{
    flex-grow: 2;
}

.cart-item{
    display: flex;
    gap: 1rem;
    align-items: center;
    margin-bottom: 2rem;
    padding-bottom: 2rem;
    border-bottom-color: #C7B299;
    border-bottom-style: dashed;
    border-bottom-width: 2px;
}

.cart-item h5{
    margin: 0 0 0 1rem;
}

.cart-item p{
    width: auto;
}


.cart-img{
    width: 30%;
}

.cart-cost{
    margin: 0 0 0 auto;
    width: auto;
}

.cart-total{
    display: flex;
    margin: -1rem 0 0 0;
    justify-content: space-between;
}

.cart-total h4{
    margin: auto 0;
}

.reservation{
    display: flex;
    flex-direction: column;
    width: 25%;
}

.reservation h4{
    margin: 0.5rem 0;
}

/*Payment Form Page*/
.payment-items{
    display: flex;
    width: 50%;
    padding: 2rem;
    margin: 2rem 0;
    border: 2px solid #F2D9CC;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.pay-method-item{
    display: flex;
    box-sizing: border-box;
    align-items: center;
}

.pay-method-item label{
    margin: 0;
}

.pay-icon{
    display: inline-block;
    width: 2rem;
    margin: 0 0.5rem
}

fieldset{
    border: none;
    padding: 0;
    margin: 0;
}

/*Payment Confirmation Page*/
.full-page{
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 75vh;
}

.center-content{
    text-align: center;
}

.center-content p{
    width: 100%;
    margin: 0 auto 2rem auto
}

.center-content h3{
    margin-bottom: 1rem;
}

.center-content img{
    width: 6rem;
    margin: auto;
}

/*  FEEDBACK PAGE  */
.feedback-items{
    width: 50%;
    padding: 2rem;
    margin: 2rem 0;
    border: 2px solid #F2D9CC;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.feed-item{
    width: 90%;
}

/*  Menu  */
.menu{
    margin: 6rem auto 0 auto;
    width: 60%;
}

/* Contact Info */
.contact-info{
    display: flex;
    gap: 4rem;
}

.contact-info h4{
    margin-bottom: 1rem;
}

.contact-map{
    border: 2px solid #F2D9CC;
    padding: 1rem;
    width: 60%;
    height: 60vh;
    object-fit: cover;
}

@media screen and (max-width: 1000px) {
    .prod-listing{
        justify-content: space-evenly;
        gap: 1rem;
    }
    .payment-items, .feedback-items{
        width: auto;
    }
    .contact-info{
        gap: 2rem;
    }
    .contact-info h4{
        margin-bottom: 0;
    }
    .menu, .contact-map{
        width: 80%;
    }
}

@media screen and (max-width: 800px) {
    .cart{
        flex-direction: column;
        gap: 2rem;
    }
    .cart-items-total, .reservation{
        width: auto;
    }
    .contact-info{
        flex-direction: column;
        gap: 0;
    }
}
/* ... */

